welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:1: error: Missing closing brace `}' assumed here
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
^