welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday) {speed==speed-5}
	else {
		if (speed<=60) return 0
		if (speed>=61 && speed <=80)
	}
